[package]

name = "yaxpeax-pic17"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-pic17/"
description = "pic17 decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { path = "../../yaxpeax-arch" }
"termion" = "1.4.0"
"serde" = "*"
"serde_derive" = "*"

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = []
